<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7f7f7f"
    tools:context=".VideoAdvancedActivity"
    android:fitsSystemWindows="false">

    <com.thunder.livesdk.video.ThunderPreviewView
        android:id="@+id/vAD_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_ad_back"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:src="@mipmap/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/advanced_main_title"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVAD_closeMic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/alpha_btn_bg"
        android:minHeight="32dp"
        android:text="@string/advanced_close_mic"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_roomid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:text="@string/advanced_room_id"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ad_back" />

    <TextView
        android:id="@+id/tv_uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="2dp"
        android:text="@string/advanced_user_id"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_roomid" />

    <ImageView
        android:id="@+id/iv_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="15dp"
        android:src="@mipmap/log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vAD_preview" />

    <ImageView
        android:id="@+id/iv_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="15dp"
        android:src="@mipmap/api"
        app:layout_constraintBottom_toTopOf="@+id/iv_log"
        app:layout_constraintEnd_toEndOf="@+id/vAD_preview" />

    <ImageView
        android:id="@+id/iv_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="15dp"
        android:src="@mipmap/feedback"
        app:layout_constraintBottom_toTopOf="@+id/iv_api"
        app:layout_constraintEnd_toEndOf="@+id/vAD_preview" />

    <Button
        android:id="@+id/btnVAD_transcodingMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/alpha_btn_bg"
        android:minHeight="36dp"
        android:text="@string/advanced_gear"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVAD_Mir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/alpha_btn_bg"
        android:minHeight="36dp"
        android:text="@string/advanced_mirror"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/vAD_preview"
        app:layout_constraintStart_toEndOf="@+id/btnVAD_transcodingMode" />

    <Button
        android:id="@+id/btnVAD_fillModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/alpha_btn_bg"
        android:minHeight="36dp"
        android:text="@string/advanced_render"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/vAD_preview"
        app:layout_constraintStart_toEndOf="@+id/btnVAD_Mir" />

    <Button
        android:id="@+id/btnVAD_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/alpha_btn_bg"
        android:minHeight="36dp"
        android:text="@string/advanced_portrait"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVAD_fillModel" />

    <Button
        android:id="@+id/btnVAD_onOffCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/alpha_btn_bg"
        android:minHeight="36dp"
        android:text="@string/advanced_close_camera"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/vAD_preview"
        app:layout_constraintStart_toEndOf="@+id/btnVAD_orientation" />

    <Button
        android:id="@+id/btnVAD_switchCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/alpha_btn_bg"
        android:minHeight="36dp"
        android:text="@string/advanced_bfront_camera"
        android:textAllCaps="false"
        android:textColor="@drawable/btn_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVAD_onOffCamera" />

</androidx.constraintlayout.widget.ConstraintLayout>