<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VideoAdvancedActivity">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:background="#F5F7FD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/advanced_homepage_anchorhint"
            android:textColor="#1C1C1C"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

        <Button
            android:id="@+id/btnCreatRoom"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:minHeight="32dp"
            android:text="@string/advanced_homepage_createroom"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="14dp"
            android:background="#F5F7FD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/advanced_homepage_audiencehint"
            android:textColor="#1C1C1C"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout2" />

        <EditText
            android:id="@+id/etRoomID"
            android:layout_width="131dp"
            android:layout_height="36dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/input_bg"
            android:digits="1234567890"
            android:gravity="left|center"
            android:hint="@string/text_hint_et_room_id"
            android:inputType="phone|number"
            android:maxLength="8"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#272E44"
            android:textColorHint="#CBCBCB"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintEnd_toStartOf="@+id/btnJoinRoom"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/ivClean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:src="@mipmap/clean"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/etRoomID"
            app:layout_constraintEnd_toEndOf="@+id/etRoomID"
            app:layout_constraintTop_toTopOf="@+id/etRoomID" />

        <Button
            android:id="@+id/btnJoinRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:enabled="false"
            android:minHeight="32dp"
            android:text="@string/advanced_homepage_joinroom"
            android:textAllCaps="false"
            android:textColor="@drawable/blue_button_txt_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/list_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/advanced_homepage_hint1"
            android:textColor="#7A7A7A"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/advanced_homepage_hint2"
            android:textColor="#7A7A7A"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/advanced_homepage_hint3"
            android:textColor="#7A7A7A"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/advanced_homepage_hint4"
            android:textColor="#7A7A7A"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/advanced_homepage_hint5"
            android:textColor="#7A7A7A"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/advanced_homepage_hint6"
            android:textColor="#7A7A7A"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/advanced_homepage_hint7"
            android:textColor="#7A7A7A"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout3"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>