<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alpha_btn_bg">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/mirror_preview"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/mirror_push"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/tvPreviewNoMirror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/mirror_mode_offmirror"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="0.5dp"
        android:layout_height="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="26dp"
        android:background="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tvPreviewNoMirror"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPreviewMirror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/mirror_mode_onmirror"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPushNoMirror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/mirror_mode_offmirror"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPreviewNoMirror" />

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="0.5dp"
        android:layout_height="16dp"
        android:layout_marginEnd="18dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvPushNoMirror"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />

    <TextView
        android:id="@+id/tvPushMirror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/mirror_mode_onmirror"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout5"
        app:layout_constraintTop_toBottomOf="@+id/tvPreviewMirror" />


</androidx.constraintlayout.widget.ConstraintLayout>